# rs-debezium-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml
.github/workflows/: ci.yml
examples/: print_events.rs
java/io/rsdebezium/: RsChangeConsumer.java
scripts/: download-debezium.sh
src/: base_handler.py  engine.rs  error.rs  handler.rs  jvm.rs  lib.rs  python.rs  types.rs
tests/: test_types.rs
tests/python/: conftest.py  test_rs_debezium_engine.py
