[package]
name = "rs-debezium-engine"
version = "0.1.0"
edition = "2021"
description = "Embedded Debezium CDC engine for Rust — Rust wrapper around Debezium Java Engine via JNI, with Python bindings via PyO3"
license = "Apache-2.0"
authors = ["Dwicky Feriansyah Putra <feri.dfp@gmail.com>"]

[lib]
name = "rs_debezium_engine"
# cdylib for Python, rlib for Rust
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[example]]
name = "print_events"
path = "examples/print_events.rs"

[dependencies]
jni = { version = "0.21", features = ["invocation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
glob = "0.3"
once_cell = "1"
tokio = { version = "1", features = ["rt"], optional = true }
pyo3 = { version = "0.22", features = ["extension-module", "serde"], optional = true }

[build-dependencies]
fs_extra = "1"

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
tempfile = "3"

[features]
default = []
async-runtime = ["dep:tokio"]
python = ["dep:pyo3"]
